imports to sun.misc removed